<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_weight="1"
    android:layout_gravity="center"
    tools:context=".Calculadora">

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_weight="0.2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/txvOperacion"
            android:gravity="center_vertical|right"
            android:textColor="@color/ElegantWhite"
            android:textSize="20sp"
            android:layout_weight="0.5"
            android:background="@color/CiColorGray1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        </TextView>

        <View
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/ElegantWhite"
            android:layout_width="match_parent"
            android:layout_height="2dp">

        </View>

        <TextView
            android:id="@+id/txvRespuesta"
            android:textStyle="bold"
            android:gravity="center_vertical|right"
            android:background="@color/CiColorGray1"
            android:textColor="@color/ElegantWhite"
            android:textSize="20sp"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_weight="0.2"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <Button
                android:textSize="20sp"
                android:onClick="OnClickAc"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/ac"
                android:background="@drawable/button_menos_redondeado"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Button>

            <Button
                android:textSize="20sp"
                android:onClick="OnClickDel"
                android:clickable="true"
                android:textColor="@color/colorPrimaryDark"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:text="@string/del"
                android:background="@drawable/button_menos_redondeado"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Button>

            <Button
                android:textSize="20sp"
                android:onClick="OnClickMas"
                android:clickable="true"
                android:textColor="@color/colorPrimaryDark"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:text="@string/mas"
                android:background="@drawable/button_menos_redondeado"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Button>

            <Button
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="OnClickMenos"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:text="@string/menos"
                android:background="@drawable/button_menos_redondeado"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Button>
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_weight="0.2"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <Button
                android:textSize="20sp"
                android:onClick="OnClickSiete"
                android:clickable="true"
                android:textColor="@color/colorPrimaryDark"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:text="@string/siete"
                android:background="@drawable/button_menos_redondeado"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Button>

            <Button
                android:textSize="20sp"
                android:onClick="OnClickOcho"
                android:clickable="true"
                android:textColor="@color/colorPrimaryDark"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:text="@string/ocho"
                android:background="@drawable/button_menos_redondeado"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Button>

            <Button
                android:textSize="20sp"
                android:onClick="OnClickNueve"
                android:clickable="true"
                android:textColor="@color/colorPrimaryDark"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:text="@string/nueve"
                android:background="@drawable/button_menos_redondeado"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Button>

            <Button
                android:textSize="20sp"
                android:onClick="OnClickDivision"
                android:clickable="true"
                android:textColor="@color/colorPrimaryDark"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:text="@string/division"
                android:background="@drawable/button_menos_redondeado"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Button>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_weight="0.2"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <Button
                android:textSize="20sp"
                android:onClick="OnClickCuatro"
                android:clickable="true"
                android:textColor="@color/colorPrimaryDark"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:text="@string/cuatro"
                android:background="@drawable/button_menos_redondeado"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Button>

            <Button
                android:onClick="OnClickCinco"
                android:clickable="true"
                android:textColor="@color/colorPrimaryDark"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:text="@string/cinco"
                android:background="@drawable/button_menos_redondeado"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_height="match_parent">

            </Button>

            <Button
                android:onClick="OnClickSeis"
                android:clickable="true"
                android:textColor="@color/colorPrimaryDark"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:text="@string/seis"
                android:textSize="20sp"
                android:background="@drawable/button_menos_redondeado"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Button>

            <Button
                android:onClick="OnClickPor"
                android:clickable="true"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:text="@string/por"
                android:background="@drawable/button_menos_redondeado"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Button>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_weight="0.2"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <Button
                android:onClick="OnClickUno"
                android:clickable="true"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:text="@string/uno"
                android:background="@drawable/button_menos_redondeado"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Button>

            <Button
                android:onClick="OnClickDos"
                android:clickable="true"
                android:textColor="@color/colorPrimaryDark"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:text="@string/dos"
                android:background="@drawable/button_menos_redondeado"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_height="match_parent">

            </Button>

            <Button
                android:onClick="OnClickTres"
                android:clickable="true"
                android:textColor="@color/colorPrimaryDark"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:text="@string/tres"
                android:textSize="20sp"
                android:background="@drawable/button_menos_redondeado"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Button>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.25"
                android:background="@color/CiColorTur1"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="OnClickIgual"
                android:text="@string/igual"
                android:textColor="@color/ElegantWhite"
                android:textSize="20sp">

            </Button>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_weight="0.2"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <Button
                android:onClick="OnClickCero"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/cero"
                android:background="@drawable/button_menos_redondeado"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>